--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <htm es>
     <head>
-        <title>Invie-Home</title>
+        <title>CchinaSeria-home</title>
         <meta charset="utf-8"/>
         <link href="https://fonts.googleapis.com/css?family=Montserrat+Alternates:500i|Droid+Serif:700" rel="stylesheet">
         <link rel="stylesheet" href="css/invie02.css"/>
