--- a/index.html
+++ b/index.html
@@ -56,10 +56,8 @@
         <section id="guitarras" class="guitarras contenedor"> <!--guittarras-->
          <h2>Articulos</h2><!--titulo-->
          <div class="video-responsive-contenedor">
-             
-            <iframe class="video-responsive-rsc"  src="https://www.youtube.com/embed/H2gL0cJ-ZzY" frameborder="0" allowfullscreen></iframe>
-             <iframe class="video-responsive-rsc" src="https://www.youtube.com/embed/sOOebk_dKFo?ecver=1" frameborder="0" allowfullscreen></iframe>
-              <iframe class="video-responsive-rsc" src="https://www.youtube.com/embed/ji1tCcIgH5U?ecver=1" frameborder="0" allowfullscreen></iframe>
+            <!-- 
+                          <iframe class="video-responsive-rsc" src="https://www.youtube.com/embed/ji1tCcIgH5U?ecver=1" frameborder="0" allowfullscreen></iframe> -->
                <vide src="video/elamate.mp4"></vide>
              
            </div>
