--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
         <section id="guitarras" class="guitarras contenedor"> <!--guittarras-->
          <h2>Articulos</h2><!--titulo-->
           <div class="video-responsive-contenedor">
-            
-                 <iframe class="video-responsive-rsc" src="https://www.youtube.com/embed/A8LHlkew3XY?list=PL-O-v-TvCUxuQ-1fso2JRdoz1eEW5P8Zj?ecver=1" frameborder="0" allowfullscreen></iframe>
+            <iframe class="video-responsive-rsc" src="https://www.youtube.com/embed/fK8lF3ELOvM?ecver=1" frameborder="0" allowfullscreen></iframe>
                   
 
            </div>
